--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ h5 {
 }
 h1 {
   font-size: 28px;
-  margin-top: 40px; 
+  margin-top: 40px;
 }
 h2 {
   font-size: 1.35em;
@@ -28,13 +28,13 @@ h2 {
 h3.ng-scope {
   font-size: 17px;
 }
-input:focus, 
-textarea:focus, 
+input:focus,
+textarea:focus,
 button:focus {
   outline: none;
 }
-.nav .open > a, 
-.nav .open > a:hover, 
+.nav .open > a,
+.nav .open > a:hover,
 .nav .open > a:focus {
   background-color: transparent;
 }
@@ -97,7 +97,7 @@ display: none;
   -ms-transition:  width .2s ease-in;
       transition: width .2s ease-in;
   color: #fff;
-  background-color: #2a6dbb;		
+  background-color: #2a6dbb;
 }
 #wrapper.toggled #sidebar-wrapper {
   width: 350px;
@@ -118,7 +118,7 @@ display: none;
   list-style: none;
 }
 .sidebar-nav li {
-  position: relative; 
+  position: relative;
   line-height: 20px;
   display: inline-block;
   width: 100%;
@@ -127,7 +127,7 @@ display: none;
   display: block;
   color: #b9b9b9;
   text-decoration: none;
-  padding: 10px 15px 10px 30px;    
+  padding: 10px 15px 10px 30px;
 }
 .sidebar-nav li a:hover,
 .sidebar-nav li a:active,
@@ -157,7 +157,7 @@ display: none;
 }
 .menu {
   position: absolute;
-  top: 8px;  
+  top: 8px;
   z-index: 999;
   display: block;
   width: 32px;
@@ -226,8 +226,8 @@ display: none;
 .menu.is-closed .hamb-bottom {
   background-color: #ffffff;
 }
-.menu.is-closed .hamb-top { 
-  top: 4px; 
+.menu.is-closed .hamb-top {
+  top: 4px;
   -webkit-transition: all .35s ease-in-out;
   transition: all .35s ease-in-out;
 }
@@ -236,7 +236,7 @@ display: none;
   margin-top: -3px;
 }
 .menu.is-closed .hamb-bottom {
-  bottom: 7px;  
+  bottom: 7px;
   -webkit-transition: all .35s ease-in-out;
   transition: all .35s ease-in-out;
 }
@@ -258,9 +258,9 @@ display: none;
 .menu.is-open .hamb-top,
 .menu.is-open .hamb-bottom {
   top: 50%;
-  margin-top: -2px;  
+  margin-top: -2px;
 }
-.menu.is-open .hamb-top { 
+.menu.is-open .hamb-top {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
@@ -423,12 +423,12 @@ a:hover {
   /*Navbar customisation*/
 #navbar {
   text-align: center;
-}	
+}
 nav.navbar {
   background-color: #27ae61;
   border-color: transparent;
 }
-.navbar-toggle:hover, 
+.navbar-toggle:hover,
 .navbar-toggle:focus {
   background-color: transparent !important;
 }
@@ -478,7 +478,7 @@ button.navbar-toggle.collapsed:hover .icon-bar:nth-child(3){
 .info-page h1 span:not(.light-font) {
   display: inline-block;
   width: 83%;
-  margin: 0 1%; 
+  margin: 0 1%;
 }
 .panel {
   -webkit-box-shadow: none;
@@ -533,17 +533,17 @@ ul.accordion {
 .appointment-block .panel-body.haut {
   width: 100%;
 }
-.panel-group.home #headingOne, 
+.panel-group.home #headingOne,
 .panel-group.home #collapseOne .panel-body  {
   background-color: #00be9c;
   padding: 3%;
 }
-.panel-group.home #headingTwo, 
+.panel-group.home #headingTwo,
 .panel-group.home #collapseTwo .panel-body  {
   background-color: #53d78b;
   padding: 3%;
 }
-.panel-group.home #headingThree, 
+.panel-group.home #headingThree,
 .panel-group.home #collapseThree .panel-body {
   background-color: #2c97df;
   padding: 3%;
@@ -567,7 +567,7 @@ ul.accordion {
 }
 .home .panel-title a::before {
   content: "\f272";
-  font-weight: 100; 
+  font-weight: 100;
 	font-family: "FontAwesome";
   color: #ffffff;
   font-size: 1.25em;
@@ -580,7 +580,7 @@ ul.accordion {
 }
 .panel-body .info {
   max-height: 300px;
-  height: 100%; 
+  height: 100%;
 }
 .panel-blue .panel-heading {
   background: #2c97df;
@@ -620,7 +620,7 @@ ul.accordion {
 .panel-blue .panel-title a {
   display: block;
 }
-.panel-blue .panel-title a.collapsed::after, 
+.panel-blue .panel-title a.collapsed::after,
 .panel-blue .panel-title a::after {
   content: "";
 }
@@ -653,7 +653,7 @@ ul.accordion {
 }
 .panel-blue .panel-section ul,
 ul.disc-list {
-  list-style-type: disc; 
+  list-style-type: disc;
 }
 .panel-blue .panel-content-title {
   padding: 15px;
@@ -673,10 +673,10 @@ ul.disc-list {
   color: #7ed222;
   position: relative;
   top: 10px;
-} 
+}
 .info-page.tutkinnonosat .left-column h1 i {
   color: #f5a623;
-}  
+}
 .info-page .left-column h1 i::before {
   font-size: 2.65em;
 }
@@ -729,7 +729,7 @@ ul.disc-list {
 .info-page.tutkinnonosat .right-column ul li:first-child a {
   width: 95%;
   float: right;
-} 
+}
 .info-page.tutkinnonosat .right-column ul li:not(:first-child) a {
   width: 80%;
   float: right;
@@ -745,7 +745,7 @@ ul.disc-list {
   color: #0a2f87;
   position: relative;
   top: 10px;
-} 
+}
 .info-page.oppilaitos .left-column h1 i::after {
   font-family: "FontAwesome";
   content: "\f1ad";
@@ -965,7 +965,7 @@ ul.right-links li a:hover {
 
 }
 .box {
-  height: auto; 
+  height: auto;
 }
 .haut .more-search-results a {
   text-decoration: none;
@@ -1019,15 +1019,15 @@ footer p {
   text-align: right;
   font-size: 1.2em;
   padding: 5% 0;
-  color: dimgrey;	
+  color: dimgrey;
 }
 .social-media {
   float: right;
-  padding-top: 1.1em; 
+  padding-top: 1.1em;
 }
 .social-media li {
   display: inline;
-  padding-left: .25em; 
+  padding-left: .25em;
 }
 .social-media .separator {
   font-size: 1.5em;
@@ -1037,7 +1037,7 @@ footer p {
 }
 .container-fluid .col-xs-12 {
 	padding-right: 0;
-	padding-left: 0; 
+	padding-left: 0;
 }
 .filter-button {
   background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0, #5B5B5B), color-stop(0.47, #464646));
@@ -1069,7 +1069,7 @@ footer p {
   transition: all ease-in .5s;
 }
 .filter-button.index-page {
-  background-image: none; 
+  background-image: none;
   display: block;
   position: relative;
   top: 2px;
@@ -1078,14 +1078,14 @@ footer p {
 }
 .filter-button.index-page::after {
   color: #337ab7;
-  content: "+ Rajaa etsintää";  
+  content: "+ Rajaa etsintää";
 }
 .filter-button.index-page.sulje {
   transition: all ease-in 1s;
   background: #ffffff;
 }
 .filter-button.index-page.sulje::after {
-  content: "- Sulje rajaimet";  
+  content: "- Sulje rajaimet";
 }
 .highlight {
   color: #f5aa01;
@@ -1096,7 +1096,7 @@ footer p {
 }
 .search-results {
   padding-bottom: 30px;
-}  
+}
 .search-results .row {
     margin-top: 30px;
 }
@@ -1313,7 +1313,7 @@ footer p {
 .filter-container input {
   width: 82%;
   margin-left: 20px;
-}   
+}
 .filter-options {
   z-index: 998;
   left: 0;
@@ -1342,7 +1342,7 @@ footer p {
   box-shadow: none;
 }
 .filters-main {
-  margin-top: 40px; 
+  margin-top: 40px;
 }
 .filters-main h5 {
   color: #9c9c9c;
@@ -1351,7 +1351,7 @@ footer p {
   margin-top: 15px;
   margin-bottom: 15px;
 }
-.checkbox label:after, 
+.checkbox label:after,
 .radio label:after {
   content: '';
   display: table;
@@ -1442,7 +1442,7 @@ span.cr.ch-5 {
 
 .osaamisalat {
   font-weight:bold;
-  font-size: 18px; 
+  font-size: 18px;
 }
 .osaamisalat::after {
   content: "\f107";
@@ -1509,7 +1509,7 @@ p.student-comment {
   border-bottom: 1px solid #979797;
 }
 .oppilaitos .right-column {
-  background-color: transparent; 
+  background-color: transparent;
   padding-top: 30px;
 }
 .oppilaitos .right-column {
@@ -1568,7 +1568,7 @@ p.student-comment {
 }
 .modal-footer a{
   color: #ffffff;
-} 
+}
 .modal-footer a:focus,
 .modal-footer a:visited {
   text-decoration: none;
@@ -1634,7 +1634,7 @@ p.student-comment {
   width: 100%;
   max-height: 400px;
   height: 100%;
-  margin-top: 30px; 
+  margin-top: 30px;
 }
 .toteutus a.header:before,
 .compare a.header:before {
@@ -1649,9 +1649,11 @@ p.student-comment {
 .row.compare {
   margin-top: 30px;
 }
+.row.compare .light-font {
+  font-size: 0.85em;
+}
 .compare a.header:before {
   position: relative;
-  top:-14px;
 }
 .left-column.toteutus h1 i{
   color: #000000;
@@ -1664,10 +1666,13 @@ h1 a.header:visited,
 h1 a.header:focus {
   text-decoration: none;
   color: #000000;
-} 
+}
 h1 a span {
   display: block;
   font-weight: 400;
+}
+h1 a {
+  color: #000000;
 }
 hr {
   border-top: 1px solid #979797;
@@ -1710,7 +1715,7 @@ p.btn-education {
   margin-top: 40px;
 }
 .appointment p.btn-education {
-  margin-top:0; 
+  margin-top:0;
 }
 
 p.btn-education .btn-default{
@@ -1746,7 +1751,7 @@ strong {
   background: #ffffff;
   min-height: 25px;
   height: auto;
-} 
+}
 #compare-row.closed .container {
   visibility: hidden;
   display: none;
@@ -1755,12 +1760,31 @@ strong {
   display: table;
   margin: 0 auto;
 }
+#compare-row .compare-box a{
+  color:#ffffff;
+  text-decoration: underline;
+  position: relative;
+  top:-5px;
+}
+#compare-row .compare-box:nth-child(2) {
+  background: #41b8bc;
+}
+#compare-row .compare-box:nth-child(3) {
+  background: #d7b85e;
+}
+#compare-row .compare-box:nth-child(4) {
+  background: #67adce;
+}
 #compare-row .pull-right a:nth-child(1),
 .filter-options .action-buttons a:nth-child(1),
 .tutustu-button
  {
   margin: 85px auto 20px;
-  padding: 20px;
+  padding: 20px 40px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  text-transform: uppercase;
   border: none;
   background-image: -webkit-gradient(
     linear,
@@ -1814,27 +1838,47 @@ li.hae a::after {
   color: #ffffff;
   font-weight: bold;
 }
-.compare-box {
-  border: 1px solid #0ea4d7;
-  background: #ffffff;
-  min-height: 200px;
+#compare-row .compare-box {
+  border: 2px solid #ffffff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  min-height: 160px;
   height: auto;
-  position: relative;
-  left: 30px;
-  top: 55px;
-  width: 20%;
-  margin-left: 30px;
+  margin: 30px 30px 30px 0;
+  width: 16%;
+}
+.compared-subjects-title {
+  width: 14%;
+  margin: 5% 1%;
+  text-align: center;
+  font-size: 1.35em;
+}
+#compare-row .pull-right {
+  border-left: 1px solid #bfbfbf;
+  padding-bottom: 2%;
 }
 .compare-box button.close {
+  -webkit-transition: ease-in-out .3s;
+  -moz-transition: ease-in-out .3s;
+  transition: ease-in-out .3s;
   width: 100%;
   text-align: right;
-  margin: 5px;
+  margin: 5px 5px 0;
+  color: #ffffff;
+  opacity: .4;
+}
+.compare-box button.close:hover {
+  -webkit-transition: ease-in-out .3s;
+  -moz-transition: ease-in-out .3s;
+  transition: ease-in-out .3s;
+  opacity: .9;
 }
 .compare-box a {
   display: block;
 }
 .compare-box .title {
-  height: 45px;
+  height: 90px;
   overflow: hidden;
   display: inline-block;
   margin: 15px;
@@ -1867,57 +1911,99 @@ button.toggle-compare::after {
   content: "Pienennä";
   display: block;
   font-size: 12px;
-} 
+}
 button.toggle-compare.closed::after {
   content: "Avaa vertailu";
-} 
+}
 .compared-items .compare-box {
-  border: 1px solid #0ea4d7;
-  background: #ffffff;
+  border: none;
+  background: none;
   min-height: 200px;
   height: auto;
-  width: 95%;
-  margin-left: 2.5%;
-  margin-bottom: 2.5%;
+  width: 96%;
+  margin-left: 3.55%;
   left: 0;
   top: 0;
 }
+.compared-items .compare-box {
+  border-top: 1px solid #ccd6df;
+  border-left: 1px solid #ccd6df;
+  border-right: 1px solid #ccd6df;
+}
+.compared-items .green .compare-box {
+  background: #41b8bc;
+}
+.compared-items .gold .compare-box {
+  background: #d7b85e;
+}
+.compared-items .blue .compare-box {
+  background: #67adce;
+}
+.compare-page .list-group-item .inner {
+    margin: 0;
+    display: block;
+    height: 100%;
+    width: 96%;
+    position: absolute;
+    top: 0;
+    left:3.5%;
+    text-align: left;
+}
+.compare-page .list-group-item p {
+  position: relative;
+  margin-left: 25px;
+}
+.compare-page .l-blue-bottom.right .inner,
+.compare-page .l-blue-bottom .inner,
+.compare-page .d-blue-bottom .inner {
+  border-left: 1px solid #ccd6df;
+  border-right: 1px solid #ccd6df;
+}
+.compare-page .l-blue-bottom .inner {
+  background-color: #d9f1f3;
+}
+.compare-page .d-blue-bottom .inner {
+  background-color: #f7eed1;
+}
+.compare-page .l-blue-bottom.right .inner {
+  background-color: #e1eef6!important;
+}
+.compare-page .compare-box .title {
+  color: #ffffff;
+  font-size: 1.123em;
+  text-decoration: underline;
+  line-height: 1.5em;
+  margin-top: 3em;
+}
+.compare-page .compare-box .title strong {
+  position: relative;
+  top: -5px;
+}
 .compare-page .col-md-3 {
   padding-right: 0 !important;
-  padding-left: 0 !important; 
+  padding-left: 0 !important;
 }
-.compare-page .col-md-3.l-blue-top {
-  background: #d4eaf8;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-top: 1px solid #ddd;
-  padding-top: 10px;
+.row.compare-info .data-col p {
+  margin: 5px 0;
 }
-.compare-page .col-md-3.l-blue-bottom {
-  background: #d4eaf8;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+.row.compare-info .data-col {
+  float: right;
+  margin-bottom: 3px;
 }
-.compare-page .col-md-3.d-blue-top{
-  background: #c0e0f5;
-  border-left: 1px solid #c0e0f5;
-  border-right: 1px solid #c0e0f5;
-  border-top: 1px solid #c0e0f5;
-  padding-top: 10px;
+.row.compare-info .data-col:nth-child(1) {
+  background: #d9f1f1;
 }
-.compare-page .col-md-3.d-blue-bottom{
-  background: #c0e0f5;
-  border-left: 1px solid #c0e0f5;
-  border-right: 1px solid #c0e0f5;
-  border-bottom: 1px solid #c0e0f5;
+.row.compare-info .data-col:nth-child(2) {
+  background: #f6edd0;
+}
+.row.compare-info .data-col:nth-child(3) {
+  background: #e1eef5;
+  margin-bottom: 15px;
 }
 .compare-page {
   margin-top: 50px;
 }
 .compare-page .list-group-item {
-  position: relative;
-  display: block;
   padding: 25px 15px;
   font-weight: bold;
   height: 75px;
@@ -1926,20 +2012,22 @@ button.toggle-compare.closed::after {
   border-left: none;
   border-right: none;
   border-top: 1px solid #000000;
+  border-bottom: none;
   background: transparent;
 }
 .compare-page .list-group-item:first-child {
   border: none;
 }
 .compare-page .list-group-item:last-child {
-  border-bottom: 1px solid #000000;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+.compare-page .list-group-item:last-child .inner {
+  border-bottom: 1px solid #ccd6df;
+}
 .compare-mobile {
-  background: #d4eaf8;
   padding-bottom: 70px;
-  margin-bottom: 30px;
+
 }
 .compare-table {
   font-weight: bold;
@@ -2106,7 +2194,7 @@ p.just-info {
   font-family: "FontAwesome";
   position: relative;
   left: 10px;
-  font-weight: 100;		
+  font-weight: 100;
 }
 .block-layer .block-content p {
   height: 80%;
@@ -2334,7 +2422,7 @@ a.titlelink {
   }
   .haut .appointment {
     width: 80%;
-  } 
+  }
   .header-search {
     width: 100%
   }
@@ -2353,7 +2441,7 @@ a.titlelink {
   .search-button::after {
     content: "\f002";
     font-family: "FontAwesome";
-  } 
+  }
   ul.right-links {
     float: left;
     width: 100%;
@@ -2419,7 +2507,7 @@ a.titlelink {
     color: #ffffff;
     font-size: 1.6em;
     visibility: hidden;
-  } 
+  }
   .text {
     width: 75%;
   }
@@ -2482,7 +2570,8 @@ h1 {
 .oppilaitos .right-column {
   height: auto;
 }
-.compare-box {
+#compare-row .compare-box,
+.compare-mobile .compare-box {
   width: 100%;
   display: block;
   margin-left: 0;
@@ -2491,21 +2580,52 @@ h1 {
   max-height: 80px;
   left: 0;
 }
+#compare-row .compare-box {
+  margin-bottom: 0;
+}
 .compare-box a.button {
   display: none;
 }
-.compare-box button.close {
+.compare-box .close {
   font-size: 17px;
   margin: 2px 5px 0;
+  color: #ffffff !important;
+}
+.compare-box .close:focus, .compare-box .close:hover {
+  color: #ffffff !important;
+  opacity: .9 !important;
+}
+.compared-subjects-title {
+  width: 100%;
+  margin: 12% 1% 0;
+  text-align: center;
+  font-size: 1.35em;
+}
+.compare-mobile .compare-box:nth-child(1) {
+  border: 1px solid #41b9bc;
+  background: #41b9bc;
+}
+.compare-mobile .compare-box:nth-child(2) {
+  border: 1px solid #d8b85f;
+  background: #d8b85f;
+}
+.compare-mobile .compare-box:nth-child(3) {
+  border: 1px solid #67aece;
+  background: #67aece;
 }
 #compare-row .pull-right a:nth-child(1) {
-  margin: 85px auto 20px;
+  margin: 25px auto 20px;
 }
 #compare-row .pull-right a {
 margin: 0 auto 20px;
 }
+#compare-row .pull-right {
+  border-left: none;
+}
 .compare-box .title {
-  margin: 0 15px 15px;
+  color:#ffffff;
+  margin: -2px 15px 15px;
+  text-decoration: underline;
 }
 button.toggle-compare {
   right: 0;
@@ -2624,7 +2744,7 @@ button.toggle-compare {
 @media (max-width: 425px) {
   .haut .appointment {
     width: 75%;
-  } 
+  }
   .panel-collapse .dropdown .btn{
     font-size: .945em
   }
@@ -2665,7 +2785,7 @@ button.toggle-compare {
 @media (max-width: 375px) {
 .haut .appointment {
   width: 70%;
-}  
+}
 .panel-body .date {
   font-size: 4em;
 }
